--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>Box Model</title>
   </head>
-  <body></body>
+  <body>
+    <div class="meet-box">
+      <h4>Alfred kimanta</h4>
+      <div class="profile-photo">
+        <!-- <h5><i class='bx bxs-bowl-hot'></i></i></h5> -->
+        <h5>A</h5>
+      </div>
+    </div>
+  </body>
 </html>
